[package]
name = "heltec-stick-v3"
version = "0.1.0"
authors = ["Jonathan Moore <moore@eds.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
opt-level = "s"

[dependencies]
esp32s3-hal = "0.14.0"
esp-backtrace = { version = "0.10.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.2.0", features = ["esp32s3", "wifi", "esp-now"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
#heapless = { version = "0.7.17", default-features = false }

#esp32-hal = "0.18.0"
#esp-wifi  = { version = "0.3.0", features = ["esp32", "wifi", "esp-now"] }


protocol = { path = "../protocol"}
rsa = { version = "0.9.6",  default-features = false}
critical-section = {version = "1.1.2", default-features = false}
heapless = { version = "0.8.0", features = ["serde"] }
postcard = { version = "1.0.0" }

