[package]
name = "t3-v1-6-1"
version = "0.1.0"
authors = ["Jonathan Moore <moore@eds.org>"]
edition = "2021"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
opt-level = "s"

[dependencies]
esp32-hal = "0.18.0"
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
esp-wifi  = { version = "0.3.0", features = ["esp32", "wifi", "esp-now"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
#heapless = { version = "0.7.17", default-features = false }
heapless = { version = "0.8.0", features = ["serde"] }

protocol = { path = "../protocol"}
esp-alloc = "0.3.0"
rsa = { version = "0.9.6",  default-features = false}

[features]
default = ["esp32-hal/xtal-40mhz"]
